# serializer version: 1
# name: test_upgrade_argv_full
  list([
    'helm',
    'upgrade',
    'my-release',
    '/charts/minimal',
    '--install',
    '--namespace',
    'prod',
    '--kubeconfig',
    '/tmp/test-kubeconfig.yaml',
    '--timeout',
    '10m',
    '--values',
    'base.yaml',
    '--values',
    'prod.yaml',
    '--set-string',
    'bitbucket.bitbucket_build_number=99',
    '--set-string',
    'bitbucket.bitbucket_repo_slug=my-repo',
    '--set-string',
    'bitbucket.bitbucket_commit=abc123def456abc123def456abc123def456abc1',
    '--set-string',
    'bitbucket.bitbucket_tag=v1.2.3',
    '--set-string',
    'bitbucket.bitbucket_step_triggerer_uuid={xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx}',
    '--history-max',
    '10',
  ])
# ---
# name: test_upgrade_argv_history_max_none_omits_flag
  list([
    'helm',
    'upgrade',
    'rel',
    '/charts/c',
    '--install',
    '--namespace',
    'default',
    '--kubeconfig',
    '/tmp/test-kubeconfig.yaml',
    '--timeout',
    '600s',
  ])
# ---
# name: test_upgrade_argv_minimal
  list([
    'helm',
    'upgrade',
    'rel',
    '/charts/c',
    '--install',
    '--namespace',
    'default',
    '--kubeconfig',
    '/tmp/test-kubeconfig.yaml',
    '--timeout',
    '600s',
  ])
# ---
# name: test_upgrade_argv_with_bitbucket_metadata
  list([
    'helm',
    'upgrade',
    'rel',
    '/charts/c',
    '--install',
    '--namespace',
    'default',
    '--kubeconfig',
    '/tmp/test-kubeconfig.yaml',
    '--timeout',
    '600s',
    '--set-string',
    'bitbucket.bitbucket_build_number=42',
    '--set-string',
    'bitbucket.bitbucket_step_triggerer_uuid={xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx}',
  ])
# ---
# name: test_upgrade_argv_with_history_max
  list([
    'helm',
    'upgrade',
    'rel',
    '/charts/c',
    '--install',
    '--namespace',
    'default',
    '--kubeconfig',
    '/tmp/test-kubeconfig.yaml',
    '--timeout',
    '600s',
    '--history-max',
    '5',
  ])
# ---
# name: test_upgrade_argv_with_history_max_zero
  list([
    'helm',
    'upgrade',
    'rel',
    '/charts/c',
    '--install',
    '--namespace',
    'default',
    '--kubeconfig',
    '/tmp/test-kubeconfig.yaml',
    '--timeout',
    '600s',
    '--history-max',
    '0',
  ])
# ---
# name: test_upgrade_argv_with_set_args
  list([
    'helm',
    'upgrade',
    'rel',
    '/charts/c',
    '--install',
    '--namespace',
    'default',
    '--kubeconfig',
    '/tmp/test-kubeconfig.yaml',
    '--timeout',
    '600s',
    '--set-string',
    'image.tag=latest',
    '--set-string',
    'replicas=3',
  ])
# ---
# name: test_upgrade_argv_with_values
  list([
    'helm',
    'upgrade',
    'rel',
    '/charts/c',
    '--install',
    '--namespace',
    'default',
    '--kubeconfig',
    '/tmp/test-kubeconfig.yaml',
    '--timeout',
    '600s',
    '--values',
    'base.yaml',
    '--values',
    'prod.yaml',
  ])
# ---
